objects/LLC_BI__Connection_Role__c.object
<CustomObject>
    <description>The Connection Role Object, used to manage the roles and their reciprocals that specify the capacity in which two relationships are connected.</description>
    <fields>
        <fullName>LLC_BI__Enable_Treasury_Maintenance_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators populate this optional checkbox field. When selected, contacts and deposits for connected relationships display as authorized users and analyzed accounts on the Treasury Maintenance page. By default, the field is not selected, and the contacts and deposits do not display.</description>
        <inlineHelpText>Contacts and deposits for connected relationships display as authorized users and analyzed accounts.</inlineHelpText>
        <label>Enable Treasury Maintenance Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Household_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators manually select this optional field. When enabled, it denotes a connection role as a household member. When disabled, it denotes that the connection role is not a household member. By default, it is disabled.</description>
        <label>Is Household Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reciprocal_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to specify the role associated directly to a connection role. When a connection role is chosen, the reciprocal role will auto-populate to establish the capacity in which the two relationships are connected.</description>
        <label>Reciprocal Role</label>
        <referenceTo>LLC_BI__Connection_Role__c</referenceTo>
        <relationshipLabel>Reciprocated Roles</relationshipLabel>
        <relationshipName>Reciprocated_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Role_Type__c</fullName>
        <description>This field is optional and is used to specify the type/category of connection role</description>
        <label>Role Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Non-Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Screen_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Administrators populate this optional field to link field sets to connection roles, controlling the fields displayed in the UI.</description>
        <inlineHelpText>Administrators populate this optional field to link field sets to connection roles, controlling the fields displayed in the UI.</inlineHelpText>
        <label>Screen Section</label>
        <referenceTo>nFORCE__Screen_Section__c</referenceTo>
        <relationshipLabel>Screen Sections</relationshipLabel>
        <relationshipName>Screen_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Self_Reciprocating__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the reciprocal role is the same as the role itself.</description>
        <inlineHelpText>Check if the reciprocal role is the same as the role itself.</inlineHelpText>
        <label>Self Reciprocating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Sort_Order__c</fullName>
        <description>This field is used to specify the sort order of connection roles</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Use_in_NCC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Admins select this optional boolean field to allow the connection role to be selected in NCC. By default, it is set to false.</description>
        <inlineHelpText>Allow the connection role to be selected in NCC.</inlineHelpText>
        <label>Use in NCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_HI__Manage_Reciprocal_Involvements__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, entity involvements will be automatically created and managed for relationships in the reciprocal role.</description>
        <inlineHelpText>When checked, entity involvements will be automatically created and managed for relationships in the reciprocal role.</inlineHelpText>
        <label>Manage Reciprocal Involvements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__Allows_Portal_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates that this Connection Role is valid to give a Portal User access to a Business Account.</description>
        <inlineHelpText>Check if this Connection Role is valid to give a Portal User access to a Business Account.</inlineHelpText>
        <label>Allows Portal Access</label>
        <type>Checkbox</type>
    </fields>
    <label>Connection Role</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Reciprocal_Role__c</columns>
        <columns>LLC_BI__Self_Reciprocating__c</columns>
        <columns>LLC_BI__Screen_Section__c</columns>
        <columns>LLC_BI__Sort_Order__c</columns>
        <columns>LLC_BI__Role_Type__c</columns>
        <columns>LLC_HI__Manage_Reciprocal_Involvements__c</columns>
        <columns>nPortal__Allows_Portal_Access__c</columns>
        <columns>LLC_BI__Use_in_NCC__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Role</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connection Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LLC_BI__Reciprocal_Role</fullName>
        <active>true</active>
        <description>Cannot be Self Reciprocating and have a Reciprocal Role specified.</description>
        <errorConditionFormula>AND( LLC_BI__Self_Reciprocating__c , NOT( ISBLANK( LLC_BI__Reciprocal_Role__c ) ) )</errorConditionFormula>
        <errorMessage>A role cannot have a reciprocal role specified if it is self reciprocating.</errorMessage>
    </validationRules>
</CustomObject>